--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,17 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab"
-        android:background="@drawable/tabbar"
-        app:tabIndicator="@drawable/tabbar_indicator"
-        app:tabIndicatorGravity="stretch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"></com.google.android.material.tabs.TabLayout>
+        android:background="@drawable/tabbar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabIndicator="@drawable/tabbar_indicator"
+        app:tabIndicatorGravity="stretch"></com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="228dp"
         app:layout_constraintTop_toBottomOf="@+id/tab"
         tools:layout_editor_absoluteX="97dp"></androidx.viewpager.widget.ViewPager>
 </androidx.constraintlayout.widget.ConstraintLayout>
